--- a/_posts/微信/2022-11-07-小程序指南.md
+++ b/_posts/微信/2022-11-07-小程序指南.md
@@ -15,14 +15,6 @@ tags:
 #### 获取节点信息
 [节点信息查询和布局相交状态](https://developers.weixin.qq.com/miniprogram/dev/framework/view/selector.html)
 
-#### wxss
-WXSS 具有 CSS 大部分的特性，也做了一些扩充和修改。
-1. 新增尺寸单位rpx。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
-2. app.wxss全局样式文件
-3. 仅支持部分css选择器。类、元素、ID、逗号，before和after伪元素。
-4. 样式导入。使用@import语句可以导入外联样式表，@import后跟需要导入的外联样式表的相对路径，用;表示语句结束。
-5. 静态的样式统一写到 class 中。style 接收动态的样式，避免影响渲染速度。
-
 #### JS
 ##### 小程序注册
 注册小程序。App() 必须在 app.js 中调用，必须调用且只能调用一次。
@@ -40,11 +32,7 @@ Tab 切换、重加载-页面全部出栈，只留下新的 Tab 页面
 ##### 模块化
 JS文件通过 module.exports 或者 exports 对外暴露接口。require引入。<br>
 小程序不支持node_modules，需要拷贝相关代码到小程序目录或使用小程序支持的npm
-##### WXS
-WXS 的运行环境和其他 JavaScript 代码是隔离的，WXS 中不能调用其他 JavaScript 文件中定义的函数，也不能调用小程序提供的API。<br>
-WXS 函数不能作为组件的事件回调。？（从基础库版本2.4.4开始，支持使用 WXS 函数绑定事件）<br>
-由于运行环境的差异，在 iOS 设备上小程序内的 WXS 会比 JavaScript 代码快 2 ~ 20 倍。在 android 设备上二者运行效率无差异。<br>
-[WXS语法参考](https://developers.weixin.qq.com/miniprogram/dev/reference/wxs/)
+
 ### JS支持情况
 - 不支持使用 eval
 - 不支持使用new Function（除new Function () {return this;}外）
@@ -687,6 +675,89 @@ wxml 编写页面 html。
 页面配置 page.json。page.json让开发者可以独立定义每个页面的一些属性，覆盖app.json中的[配置](https://developers.weixin.qq.com/miniprogram/dev/reference/)。
 
 小程序添加新页面需要在 page.json 的 pages 字段添加对应页面文件夹的路径。
+
+### wxss
+WXSS 具有 CSS 大部分的特性，也做了一些扩充和修改。
+1. 新增尺寸单位rpx。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
+2. 仅支持部分css选择器。类、元素、ID、逗号，before和after伪元素。
+3. 样式导入。使用@import语句可以导入外联样式表，@import后跟需要导入的外联样式表的相对路径，用;表示语句结束。
+4. 静态的样式统一写到 class 中。style 接收动态的样式，避免影响渲染速度。
+
+### WXS
+WXS（WeiXin Script）是小程序的一套脚本语言，结合 WXML，可以构建出页面的结构。
+
+WXS 的运行环境和其他 JavaScript 代码是隔离的，WXS 中不能调用其他 JavaScript 文件中定义的函数，也不能调用小程序提供的API。
+
+从基础库版本2.4.4开始，支持使用 WXS 函数绑定事件
+
+由于运行环境的差异，在 iOS 设备上小程序内的 WXS 会比 JavaScript 代码快 2 ~ 20 倍。在 android 设备上二者运行效率无差异。
+
+#### 模块
+WXS 代码可以编写在 wxml 文件中的` <wxs> `标签内，或以 .wxs 为后缀名的文件内。
+
+每一个 .wxs 文件和 `<wxs>` 标签都是一个单独的模块。
+
+每个模块都有自己独立的作用域，默认为私有的。一个模块要想对外暴露其内部的私有变量与函数，只能通过设置 `module.exports` 实现。
+
+#### 引入
+可以通过 wxs 标签或 require 函数引入 wxs模块。
+
+引用的时候，要注意如下几点：
+* 只能引用 .wxs 文件模块，且必须使用相对路径。
+* wxs 模块均为单例，wxs 模块在第一次被引用时，会自动初始化为单例对象。多个页面，多个地方，多次引用，使用的都是同一个 wxs 模块对象。
+* 如果一个 wxs 模块在定义之后，一直没有被引用，则该模块不会被解析与运行。
+* `<wxs>` 模块只能在定义模块的 WXML 文件中被访问到。使用 `<include>` 或 `<import>` 时，`<wxs>` 模块不会被引入到对应的 WXML 文件中。
+* `<template>` 标签中，只能使用定义该 `<template>` 的 WXML 文件中定义的 `<wxs>` 模块。
+
+```html
+<wxs src="../tool.wxs" module="tool"/>
+<view>{{tool.msg}}</view>
+```
+
+在wxs模块引入：
+```javascript
+var tools = require("./tools.wxs");
+
+console.log(tools.FOO);
+```
+
+##### wxs标签
+module是模块名，必填，在当前文件内值要唯一，否则后者覆盖前者。
+
+module 必须是 a-zA-Z或下划线_和0-9组成。数字不能作为开头。
+
+##### require函数
+在.wxs模块中引用其他 wxs 文件模块，可以使用 require 函数。
+
+#### 变量
+1. 有部分保留关键字 
+2. WXS 中的变量均为值的引用。 
+3. 没有声明的变量直接赋值使用，会被定义为全局变量。 
+4. 如果只声明变量而不赋值，则默认值为 undefined。 
+5. var表现与javascript一致，会有变量提升。
+6. 命名必须是 a-zA-Z或下划线_和0-9组成。数字不能作为开头。
+
+#### 注释
+```javascript
+<wxs module="sample">
+// 方法一：单行注释
+
+/*
+方法二：多行注释
+*/
+
+/*
+方法三：结尾注释。即从 /* 开始往后的所有 WXS 代码均被注释
+```
+
+#### 类型
+生成 date 对象需要使用 getDate函数, 返回一个当前时间的对象。
+
+生成 regexp 对象需要使用 getRegExp函数。
+
+wxs 的基本类库：https://developers.weixin.qq.com/miniprogram/dev/reference/wxs/07basiclibrary.html
+
+wxs 的运算符：https://developers.weixin.qq.com/miniprogram/dev/reference/wxs/04operator.html
 
 ### 获取节点信息
 `wx.createSelectorQuery` 可以用于获取节点属性、样式、在界面上的位置等信息。
