--- a/_posts/JavaScript/性能优化/2023-4-5-垃圾回收.md
+++ b/_posts/JavaScript/性能优化/2023-4-5-垃圾回收.md
@@ -40,5 +40,11 @@ tags:
 垃圾清理算法在每次垃圾回收时都要检查内存中所有的对象，这样的话对于一些大、老、存活时间长的对象来说同新、小、存活时间短的对象一个频率的检查很不好，
 因为前者需要时间长并且不需要频繁进行清理，后者恰好相反，分代式垃圾回收就是解决这个问题。
 
-##### 新老生代
+##### 新生代
+新生代内存区分为使用空间 from 和空闲空间 to。
+
+活动对象存储在 from，标记整理后将活动对象拷贝至 to。from 和 to 交换空间完成释放。
+
+一轮 GC 后还存活的新生代就会晋升，移动到老生代。
+
 https://juejin.cn/post/6981588276356317214#heading-8
