--- a/_posts/JavaScript/性能优化/2023-4-5-垃圾回收.md
+++ b/_posts/JavaScript/性能优化/2023-4-5-垃圾回收.md
@@ -41,10 +41,19 @@ tags:
 因为前者需要时间长并且不需要频繁进行清理，后者恰好相反，分代式垃圾回收就是解决这个问题。
 
 ##### 新生代
-新生代内存区分为使用空间 from 和空闲空间 to。
+新生代内存区分为使用空间 from 和空闲空间 to两个等大空间。
 
-活动对象存储在 from，标记整理后将活动对象拷贝至 to。from 和 to 交换空间完成释放。
+主要采用复制和标记整理。
 
-一轮 GC 后还存活的新生代就会晋升，移动到老生代。
+活动对象存储在 from，当达到一定条件，就会触发标记整理，将活动对象拷贝至 to。from 和 to 交换空间完成释放。
+
+一轮 GC 后还存活的新生代或 to 空间的使用率超过25%就会晋升，移动到老生代。
+
+##### 老生代
+老生代就是存活时间较长的对象
+
+主要采用标记清除、标记整理和增量标记算法。
+
+首先使用标记清除完成垃圾空间的回收，其次在新生代晋升时如果老生代空间不足，就会采用标记整理进行空间优化，还会采用增量标记提升回收效率。
 
 https://juejin.cn/post/6981588276356317214#heading-8
