--- a/_posts/Cordova/2023-4-15-Cordova基础.md
+++ b/_posts/Cordova/2023-4-15-Cordova基础.md
@@ -103,3 +103,16 @@ cordova platform add android --save
 # 查看当前平台
 cordova platform ls
 ```
+
+注意：安卓模拟器（Virtual Device）安装的版本要和上面平台的版本一致
+
+运行：
+```shell
+# 浏览器端运行
+cordova run browser
+
+# 真机调试
+cordova run android
+# 模拟器启动
+cordova emulate android
+```
