--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -135,6 +135,7 @@ Son.prototype.getAge = function () {
 Son.prototype.__proto__ = Object.create(Parent.prototype);
 const son1 = new Son(1, 18);
 ```
+
 ### 观察者模式
 ```javascript
 class Observed {
@@ -548,6 +549,164 @@ function quickSort(arr) {
     return quickSort(leftArr).concat(middle, quickSort(rightArr))
 }
 ```
+
+## js对象扁平化
+```javascript
+function flatten (obj) {
+  const result = {};
+  dfs ('', obj);
+  return result;
+  function dfs (key, value) {
+    if (typeof value === 'object' && value !== null) {
+      Object.keys(value).forEach(childKey => {
+        dfs(key + (Array.isArray(value) ? `[${childKey}]` : (key ? '.' : '') + childKey), value[childKey]);
+      });
+    } else {
+      result[key] = value;
+    }
+  }
+}
+```
+
+## 实现JSON.stringify
+JSON.stringify()将值转换为相应的 JSON 格式：
+* 非数组对象的属性不能保证以特定的顺序出现在序列化后的字符串中。
+* 布尔值、数字、字符串的包装对象在序列化过程中会自动转换成对应的原始值。
+* 其他类型的对象，包括 Map/Set/WeakMap/WeakSet，仅会序列化可枚举的属性。
+
+symbol, undefined, function: undefined
+NaN, Infinity, null: 'null'
+
+RegExp: {}
+Array: symbol, undefined, 函数 为 null
+Date: toJSON()
+对象：1.toJSON() 2.symbol为key的属性会被忽略 3. 值为 symbol, function 和 undefined的会被忽略
+
+对包含循环引用的对象（对象之间相互引用，形成无限循环）执行此方法，会抛出错误。
+
+```javascript
+function jsonStringify(data) {
+  let type = typeof data;
+  if(type !== 'object') {
+    let result = data;
+    if (Number.isNaN(data) || data === Infinity) {
+       //NaN 和 Infinity 序列化返回 "null"
+       result = "null";
+    } else if (type === 'function' || type === 'undefined' || type === 'symbol') {
+      // 由于 function 序列化返回 undefined，因此和 undefined、symbol 一起处理
+       return undefined;
+    } else if (type === 'string') {
+       result = '"' + data + '"';
+    }
+    return String(result);
+  } else {
+     if (data === null) {
+        return "null"  
+     } else if (data.toJSON && typeof data.toJSON === 'function') {
+         // 对象可能内置toJSON方法来自定义序列化对象
+        return jsonStringify(data.toJSON());
+     } else if (data instanceof Array) {
+        let result = [];
+        data.forEach((item, index) => {
+        if (typeof item === 'undefined' || typeof item === 'function' || typeof item === 'symbol') {
+               result[index] = "null";
+           } else {
+               result[index] = jsonStringify(item);
+           }
+         });
+         result = "[" + result + "]";
+         return result.replace(/'/g, '"');
+      } else {
+         // 处理普通对象
+         let result = [];
+         Object.keys(data).forEach((item, index) => {
+            if (typeof item !== 'symbol') {
+              //key 如果是 symbol 对象，忽略
+              if (data[item] !== undefined && typeof data[item] !== 'function' && typeof data[item] !== 'symbol') {
+                //键值如果是 undefined、function、symbol 为属性值，忽略
+                result.push('"' + item + '"' + ":" + jsonStringify(data[item]));
+              }
+            }
+         });
+         return ("{" + result + "}").replace(/'/g, '"');
+        }
+    }
+}
+```
+
+## 实现JSON.parse
+
+## 千分位分割
+```javascript
+function thousandFormat (v) {
+  const validNumber = parseFloat(v);
+  if (isNaN(validNumber)) return '';
+  const numArr = String(validNumber).split('.');
+  const result = [];
+  for (var i = numArr[0].length - 1; i >= 0; i--) {
+    if (i % 3 === 0 && i !== numArr[0].length - 1) {
+      result.unshift(',');
+    }
+    result.unshift(numArr[0][i]);
+  }
+  if (numArr[1]) result.push(...numArr[1]);
+  return result.join('');
+}
+```
+
+## TODO
+实现简版的Promise
+实现Promise.resolve方法
+实现Promise.reject方法
+实现Promise.finally方法
+实现Promise.all方法
+实现Promise.allSettled方法
+实现Promise.race方法
+实现解析URL的Params方法
+
+实现简版模板引擎
+
+实现判断电话号码方法
+实现判断邮件方法
+实现判断身份证号方法
+实现数组的map方法
+实现数组的reduce方法
+实现数组的flat（扁平化）
+实现对象扁平化方法
+实现add方法，满足以下要求
+实现sleep方法
+实现方法求两个数组的交集
+实现函数柯里化
+实现Array.isArray方法
+实现双向绑定
+实现对象数组去重
+实现判断数据类型的方法
+基于generator实现async/await
+基于Promise实现Ajax方法
+实现JSONP跨域
+实现发布订阅
+实现观察者模式
+实现Object.freeze方法
+实现异步并发数限制
+实现异步串行和异步并行
+实现Vue的reactive功能
+实现简版图片懒加载
+实现深度对比isEqual方法
+实现getValue和setValue来获取/设置对应path的值
+实现按指定长度拆分数组（lodash.chunk方法）
+实现compose方法
+实现简版redux
+实现const运算符
+实现管理本地缓存过期的方法
+实现ES6的extends运算符功能
+实现setTimeout模拟setInterval方法
+实现lazyMan方法
+实现DomToJson方法
+实现类数组转换为数组方法
+实现列表转换为树结构方法
+实现大数相加方法
+实现JS乱序算法
+实现JS函数记忆
 
 ## 资料
 [20行实现 Promise](https://juejin.cn/post/6844904094079926286)
