--- a/_posts/Cordova/2023-4-15-Cordova基础.md
+++ b/_posts/Cordova/2023-4-15-Cordova基础.md
@@ -92,7 +92,7 @@ cordova create HelloWorld io.cordova.hellocordova CordovaAppTitle
 #CordovaAppTitle 应用的标题
 ```
 
-默认是没有平台的，需要添加：
+默认是没有平台的，需要在项目根目录运行以下命令添加：
 ```shell
 #浏览器
 cordova platform add browser
