--- a/_posts/2022-12-6-计算机基础.md
+++ b/_posts/2022-12-6-计算机基础.md
@@ -65,6 +65,16 @@ tags:
 - 易于进行转换，二进制与十进制数易于互相转换;
 - 适合逻辑运算,逻辑代数是逻辑运算的理论依据，二进制只有两个数码，正好与逻辑代数中的“真”和“假”相吻合;
 
+## JavaScript 与 IEEE 754
+JavaScript 采用 IEEE 754 标准，数值存储为64位双精度格式，数值精度最多可以达到 53 个二进制位（1 个隐藏位与 52 个有效位）。
+
+64位分为三个部分：
+- 符号位：第1位是正负数符号位，0代表正数（大于等于0），1代表负数。
+- 指数位：中间的11位存储指数
+- 尾数位：最后的52位是尾数，代表有效数字，大于等于1小于2
+
+然后0.1 0.2 是怎么舍弃最后几位的？
+
 ## 不同进制的转换
 1、任意进制转十进制。
 - 每位数字乘以对应进制的位数次方后相加，位从0开始。例如：2进制的 101.1 = 1 x 2的2次方 + 0 x 2的1次方 + 1 x 2的0次方 + 1 x 2的-1次方
@@ -74,7 +84,7 @@ tags:
 - 除商取余法。除对应进制。将余数由后往前拼接得到结果。
 - JS：parseInt(num, radix);小数部分被截断。
 
-例如：把89化为二进制的数
+例如：把89化为二进制的数：除二取余，倒序排列，高位补零。
 
 89÷2=44 余1
 
@@ -150,6 +160,7 @@ tags:
 这样我们就可以组合出大约7000多个(247-161)*(254-161)=(7998)简体汉字了。
 还把数学符号、日文假名和ASCII里原来就有的数字、标点和字母都重新编成两个字长的编码。这就是全角字符，127以下那些就叫半角字符。
 把这种汉字方案叫做 GB2312。GB2312 是对 ASCII 的中文扩展
+
 ### GBK
 不再要求低字节一定是 127 号之后的内码，只要第一个字节是大于 127 就固定表示这是一个汉字的开始,又增加了近 20000 个新的汉字（包括繁体字）和符号。
 ### Unicode
@@ -216,12 +227,12 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 #### 反码
 若符号位为0，则反码和原码一致
 
-若符号位为1，则数值位全部取反
+若符号位为1，则数值位全部取反，符号位不变
 
 #### 补码
 正数的补码 = 原码
 
-负数的补码 = 反码末尾 + 1
+负数的补码 = 反码 + 1
 
 #### 移码
 补码的基础上符号位取反，只能表示整数。为什么需要移码，移码可以非常方便地判断两个数的大小。如下图：
@@ -278,6 +289,9 @@ let d = 0x14;//十六进制
 - 10进制转任意进制 10进制数.toString(目标进制)
 - 任意进制转十进制 parseInt('任意进制字符串', 原始进制)，小数部分会被截断;
 
+
+## localhost 127.0.0.1
+localhost 是默认情况下 127.0.0.1 的简写。在hosts文件中可以指定给定域名对应的 IP 地址。
 
 ## 资料
 [前端计算机基础大补丸在此！来一颗吧！](https://juejin.cn/post/7112318717798645768)
