--- a/_posts/2022-12-6-计算机基础.md
+++ b/_posts/2022-12-6-计算机基础.md
@@ -290,8 +290,12 @@ let d = 0x14;//十六进制
 - 任意进制转十进制 parseInt('任意进制字符串', 原始进制)，小数部分会被截断;
 
 
-## localhost 127.0.0.1
-localhost 是默认情况下 127.0.0.1 的简写。在hosts文件中可以指定给定域名对应的 IP 地址。
+## localhost 和 127.0.0.1
+127.0.0.1是属于回环地址。回环地址会将所有发往该地址的数据包loop back。
+
+localhost 是默认情况下都指向了 IPV4的 127.0.0.1 和 IPV6 的 ::1。
+
+在hosts文件中可以指定给定域名对应的 IP 地址。
 
 ## 资料
 [前端计算机基础大补丸在此！来一颗吧！](https://juejin.cn/post/7112318717798645768)
