--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -549,8 +549,57 @@ RAF 采用的是系统时间间隔，不会因为前面的任务，不会影响 
 
 ### == 和 === 以及 Object.is 的区别
 
+#### 严格相等
+两个被比较的值在比较前都不进行隐式转换。
+
+* 如果两个被比较的值具有不同的类型，这两个值是不相等的。
+* 如果两个被比较的值类型相同，值也相同，并且都不是 number 类型时，两个值相等。
+* 如果两个值都是 number 类型，当两个都不是 NaN，并且数值相同，或是两个值分别为 +0 和 -0 时，两个值被认为是相等的。
+
 #### Object.is
-判断+0 不等于 -0，而 NaN 等于 NaN
+Object.is() 和 === 之间的唯一区别在于它们处理带符号的 0 和 NaN 值的时候。
+
+=== 运算符（和 == 运算符）将数值 -0 和 +0 视为相等，将 NaN 视为不相等。
+
+Object.is()将0和+0视为相等，-0和其余两者不相等。将 NaN 视为相等。
+
+#### ==
+1. 如果操作数具有相同的类型，则按以下方式进行比较：
+
+* Object：仅当两个操作数引用相同的对象时，才返回 true。
+* String：仅当两个操作数具有相同的字符并且顺序相同，才返回 true。
+* Number：仅当两个操作数具有相同的值时，才返回 true。+0 和 -0 被视为相同的值。如果任一操作数为 NaN，则返回 false；因此 NaN 永远不等于 NaN。
+* Boolean：仅当操作数都是 true 或 false 时，才返回 true。
+* BigInt：仅当两个操作数具有相同的值时，才返回 true。
+* Symbol：仅当两个操作数引用相同的 symbol 时，才返回 true。
+
+2. 如果操作数之一为 null 或 undefined，则另一个操作数必须为 null 或 undefined 才返回 true。否则返回 false。
+3. 如果操作数之一是对象，而另一个是原始值，则将对象转换为原始值。
+
+> 对象转换为原始值是通过调用@@toPrimitive方法，里面调用了valueOf和toString方法。
+> 优先从valueOf方法中获取原始值，如果不是原始值就调用toString，两者都没返回原始值，就会抛出类型错误。
+> Symbol重写了[@@toPrimitive]()方法，返回了symbol
+
+4. 在这一步骤中，两个操作数都被转换为原始值（String、Number、Boolean、Symbol 和 BigInt 之一）。剩余的转换将分情况完成。
+
+> 如果它们是相同类型的，则使用步骤 1 进行比较。
+> 如果操作数中有一个是 Symbol，但另一个不是，则返回 false。
+> 如果操作数之一是 Boolean，而另一个不是，则将 Boolean 转换为 Number：true 转换为 1，false 转换为 0。然后再次对两个操作数进行宽松比较。
+> Number 转 String：将 String 转换为 Number。转换失败会得到 NaN，这将确保相等性为 false。
+   
+
+> 将 String 转换为 Number
+> Strings are converted by parsing them as if they contain a number literal. Parsing failure results in NaN. There are 
+some minor differences compared to an actual number literal:
+> Leading and trailing whitespace/line terminators are ignored.
+> A leading 0 digit does not cause the number to become an octal literal (or get rejected in strict mode).
+> + and - are allowed at the start of the string to indicate its sign. (In actual code, they "look like" part of the literal, but are actually separate unary operators.) However, the sign can only appear once, and must not be followed by whitespace.
+> Infinity and -Infinity are recognized as literals. In actual code, they are global variables.
+> Empty or whitespace-only strings are converted to 0.
+> Numeric separators are not allowed.
+
+5. Number 转 BigInt：按照其数值进行比较。如果 Number 是 ±Infinity 或 NaN，返回 false。
+6. String 转 BigInt: 使用与 BigInt() 构造函数相同的算法将字符串转换为 BigInt。如果转换失败，则返回 false。
 
 ### 常用八种继承方案
 #### 原型链继承
@@ -805,20 +854,22 @@ console.log(square.area);
 ### Promise
 Promise 是一个对象，它代表了一个异步操作的最终完成或者失败。由于它的then方法和catch、finally方法会返回一个新的Promise所以可以允许我们链式调用，解决了传统的回调地狱问题。
 
-1. catch不管被连接到哪里，都能捕获上层未捕捉过的错误。
-2. 在Promise中，返回任意一个非 promise 的值都会被包裹成 promise 对象，例如return 2会被包装为return Promise.resolve(2)。
-3. Promise 的 .then 或者 .catch 可以被调用多次, 但如果Promise内部的状态一经改变，并且有了一个值，那么后续每次调用.then或者.catch的时候都会直接拿到该值。
-4. .then 或者 .catch 中 return 一个 error 对象并不会抛出错误，所以不会被后续的 .catch 捕获。
-5. .then 或 .catch 返回的值不能是 promise 本身，否则会造成死循环
-6. .then 或者 .catch 的参数期望是函数，传入非函数则会发生值透传，将结果传入到最近的then。
-7. .then方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数，再某些时候你可以认为catch是.then第二个参数的简便写法。
-8. .finally方法也是返回一个Promise。
-9. .finally方法在Promise结束的时候，无论结果为resolved还是rejected，都会执行里面的回调函数。
-10. .finally最终返回的默认会是一个上一次的Promise对象值，不过如果抛出的是一个异常则返回异常的Promise对象。
-11. Promise.all()的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
-12. Promise.all().then()结果中数组的顺序和Promise.all()接收到的数组顺序一致。
-13. all和race传入的数组中如果有会抛出异常的异步任务，那么只有最先抛出的错误会被捕获，并且是被then的第二个参数或者后面的catch捕获；但并不会影响数组中其它的异步任务的执行。
-
+1. Promise的状态一经改变就不能再改变。
+2. .then和.catch都会返回一个新的Promise。
+3. catch不管被连接到哪里，都能捕获上层未捕捉过的错误。
+4. 在Promise中，返回任意一个非 promise 的值都会被包裹成 promise 对象，例如return 2会被包装为return Promise.resolve(2)。 
+5. Promise 的 .then 或者 .catch 可以被调用多次, 但如果Promise内部的状态一经改变，并且有了一个值，那么后续每次调用.then或者.catch的时候都会直接拿到该值。
+6. .then 或者 .catch 中 return 一个 error 对象并不会抛出错误，所以不会被后续的 .catch 捕获。
+7. .then 或 .catch 返回的值不能是 promise 本身，否则会造成死循环。
+8. .then 或者 .catch 的参数期望是函数，传入非函数则会发生值透传。
+9. .then方法是能接收两个参数的，第一个是处理成功的函数，第二个是处理失败的函数，再某些时候你可以认为catch是.then第二个参数的简便写法。
+10. .finally方法也是返回一个Promise，他在Promise结束的时候，无论结果为resolved还是rejected，都会执行里面的回调函数。
+11. .finally()方法的回调函数不接受任何的参数，在.finally()函数中是没法知道Promise最终的状态是resolved还是rejected的
+12. 它最终返回的默认会是一个上一次的Promise对象值，不过如果抛出的是一个异常则返回异常的Promise对象。
+13. Promise.all()的作用是接收一组异步任务，然后并行执行异步任务，并且在所有异步操作执行完后才执行回调。
+14. .race()的作用也是接收一组异步任务，然后并行执行异步任务，只保留取第一个执行完成的异步操作的结果，其他的方法仍在执行，不过执行结果会被抛弃。
+15. Promise.all().then()结果中数组的顺序和Promise.all()接收到的数组顺序一致。
+16. all和race传入的数组中如果有会抛出异常的异步任务，那么只有最先抛出的错误会被捕获，并且是被then的第二个参数或者后面的catch捕获；但并不会影响数组中其它的异步任务的执行。
 
 ### null 和 undefined 区别
 - null 表示空，此处不应该有值；而 undefined 表示未定义，变量声明了未赋值就是 undefined。
@@ -832,6 +883,7 @@ Promise 是一个对象，它代表了一个异步操作的最终完成或者失
 'onfocus'
 'onclick'
 `
+
 ### 闭包是什么
 每个函数都有对应的词法环境，记录了变量和对外部词法环境引用。代码要访问变量时，会先搜索内部词法环境，找不到再搜索外部环境，直至全局词法环境。
 
