--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -415,34 +415,12 @@ class LRU {
 }
 ```
 ## async-pool实现
+实现并发控制
+
 ```javascript
-async function asyncPool(poolLimit, array, iteratorFn) {
-  return new Promise(resolve => {
-    const taskList = [];
-    let running = 0;
-    const result = [];
-    for (const index in array) {
-      const task = array[index];
-      if (running < poolLimit) {
-        iteratorFn().then(handleResolve.bind(this, index), handleResolve.bind(this, index));
-        running++;
-      } else {
-        taskList.push(task);
-      }
-    }
-    function handleResolve(index, res) {
-      result[index] = res;
-      if (running >= array.length) {
-        resolve();
-        return;
-      }
-      if (running < poolLimit && taskList.length) {
-        taskList.pop()().then(handleResolve, handleRejec);
-        running++;
-      }
-    }
-  });
-}
+// poolLimit（数字类型）：表示限制的并发数；
+// array（数组类型）：表示任务数组；
+// iteratorFn（函数类型）：表示迭代函数，用于实现对每个任务项进行处理，该函数会返回一个 Promise 对象或异步函数。
 async function asyncPool(poolLimit, array, iteratorFn) {
   const ret = []; // 存储所有的异步任务
   const executing = []; // 存储正在执行的异步任务
@@ -655,20 +633,8 @@ function thousandFormat (v) {
 ```
 
 ## TODO
-实现简版的Promise
-实现Promise.resolve方法
-实现Promise.reject方法
-实现Promise.finally方法
-实现Promise.all方法
-实现Promise.allSettled方法
-实现Promise.race方法
-实现解析URL的Params方法
-
 实现简版模板引擎
 
-实现判断电话号码方法
-实现判断邮件方法
-实现判断身份证号方法
 实现数组的map方法
 实现数组的reduce方法
 实现数组的flat（扁平化）
@@ -706,7 +672,27 @@ function thousandFormat (v) {
 实现列表转换为树结构方法
 实现大数相加方法
 实现JS乱序算法
+
 实现JS函数记忆
+```javascript
+// 第二版 (来自 underscore 的实现)
+var memorize = function(func, hasher) {
+    var memoize = function(key) {
+        var cache = memoize.cache;
+        var address = '' + (hasher ? hasher.apply(this, arguments) : key);
+        if (!cache[address]) {
+            cache[address] = func.apply(this, arguments);
+        }
+        return cache[address];
+    };
+    memoize.cache = {};
+    return memoize;
+};
+
+// hasher 应返回JSON.stringify来解决参数是对象时的问题
+```
 
 ## 资料
 [20行实现 Promise](https://juejin.cn/post/6844904094079926286)
+
+[JavaScript 中如何实现并发控制？](https://mp.weixin.qq.com/s/yWOPoef9ixuSBWApZQhjIg)
