--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -1393,9 +1393,8 @@ HTTPS主要是采用对称密钥加密和非对称密钥加密组合而成的混
 * 客户端首先向服务端发送一个HTTPS请求
 * 服务端会把事先配置好的公钥证书随着其它的信息返回给客户端
 * 客户端在收到服务端发来的证书之后进行验证，验证的过程参考数字证书验证，会得到服务端的信息以及它的公钥
-* 验证成功之后生成一个叫做 client_params 的参数发送给服务器；同时自己会用伪随机函数生成一个 secret，这个secret就是它们后续进行通信的对称密钥。
-* 服务器在收到刚刚的 client_params之后，也会根据伪随机函数生成一个secret。这时候双方都有了相同的对称密钥。
-* 后面的传输都会用这个 secret 进行对称密钥加解密传输
+* 客户端生成对称秘钥，然后使用服务端公钥加密对称秘钥，再发送加密后的对称秘钥。
+* 后续通过对称秘钥加密进行通信
 
 #### 对称密钥加密和非对称密钥加密有什么区别
 对称密钥加密是最简单的一种加密方式，它的加解密用的都是相同的密钥，这样带来的好处就是加解密效率很快，但是并不安全。
@@ -1706,3 +1705,4 @@ ws.on('close', (code, reason) => {
 
 [chrome浏览器渲染进程工作流程](https://juejin.cn/post/6962087948112101383)
 
+[HTTP和HTTPS详解](https://juejin.cn/post/6844903604868874247)
