--- a/_posts/工作问题总结/2023-7-22-工作问题总结.md
+++ b/_posts/工作问题总结/2023-7-22-工作问题总结.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - 总结
+    - Uniapp
 ---
 # 工作问题总结
 
@@ -16,4 +17,29 @@ tags:
 
 例如将 `<body>` 替换为 `<!--<body></body>--><body>`，`</html>` 替换为 `<!--<body></body>--></html>`。
 
+## 在某些浏览器版本，URL.createObjectURL 传入 File 类型报错，此外 new File 生成的 File 对象结构有问题
+公司内部app封装了标题所提到的浏览器版本内核，调用 URL.createObjectURL 传入 File 类型会报错，必须传入 Blob 类型。
+
+在 IOS 上提示 TypeError，如图：
+
+![img.png](/img/IOS createObjectURL报错.png)
+
+userAgent：
+
+![img.png](/img/IOS%20createObjectURL%20报错%20内核.png)
+
+安卓上的报错：
+// TODO
+
+userAgent：
+
+![img.png](/img/安卓%20createObjectURL报错内核.png)
+
+在 vConsole 上打印的 File 对象，name 是一个数组包含了一个 Blob 对象，似乎就是我调用 new File 传入的第一个参数，被当成 name 处理。
+而打印 uni.chooseFile 返回的 File 对象就不会有这样的结构。
+// TODO 补一个图
+
+在作为参数，调用公司某些上传接口时会提示文件不能为空，其他一些又可以。所以不确定是 vConsole 的显示问题还是 File 对象有问题。
+
+![img.png](/img/工作问题总结-File对象结构.png)
 
