--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -201,6 +201,7 @@ class EventEmitter {
 只有订阅了天气预报的才会被通知，订阅了 KFC疯狂星期四闹钟事件 的不会被提醒。
 
 而观察者模式，等被观察者发出了一点动静（执行notify），所有观察者都会被通知。
+
 ## 节流
 ```javascript
 function throttle(fn, delay = 300) {
@@ -216,6 +217,64 @@ function throttle(fn, delay = 300) {
   }
 }
 ```
+
+## 实现一个节流函数? 如果想要最后一次必须执行的话怎么实现?
+
+```javascript
+function throttle (fn, wait) {
+  let lastArgs, lastThis, result, timerId, lastCallTime, lastInvokeTime;
+  wait = Number(wait) || 0;
+
+  function shouldInvoke(time) {
+    const timeSinceLastCall = time - lastCallTime;
+    const timeSinceLastInvoke = time - lastInvokeTime;
+
+    return (lastCallTime === undefined) || (timeSinceLastCall >= wait) || (timeSinceLastInvoke >= wait);
+  }
+
+  function leadingEdge(time) {
+    lastInvokeTime = time;
+    timerId = setTimeout(timerExpired, wait);
+    return invokeFunc(time);
+  }
+
+  function timerExpired() {
+    const time = Date.now();
+    timerId = undefined;
+    if (lastArgs) {
+      return invokeFunc(time);
+    }
+    return result;
+  }
+
+  function invokeFunc(time) {
+    const args = lastArgs;
+    const thisArg = lastThis;
+    lastArgs = lastThis = undefined;
+    lastInvokeTime = time;
+    result = fn.apply(thisArg, args);
+    return result;
+  }
+
+  function throttled () {
+    const time = Date.now();
+    const canInvoke = shouldInvoke(time);
+
+    lastArgs = arguments;
+    lastThis = this;
+    lastCallTime = time;
+
+    if (canInvoke) {
+      if (timerId === undefined) {
+        return leadingEdge(lastCallTime);
+      }
+    }
+    return result;
+  }
+  return throttled;
+}
+```
+
 ## 防抖
 ```javascript
 function debounce (fn, ms) {
@@ -690,6 +749,179 @@ var memorize = function(func, hasher) {
 };
 
 // hasher 应返回JSON.stringify来解决参数是对象时的问题
+```
+
+## 数组转树结构
+```javascript
+const arr = [
+    {
+      id: 2, 
+      name: '部门B', 
+      parentId: 0
+    },
+    {
+        id: 3,
+        name: '部门C',
+        parentId: 1
+    },
+    {
+        id: 1,
+        name: '部门A',
+        parentId: 2
+    },
+    {
+        id: 4,
+        name: '部门D',
+        parentId: 1
+    },
+    {
+        id: 5,
+        name: '部门E',
+        parentId: 2
+    },
+    {
+        id: 6,
+        name: '部门F',
+        parentId: 3
+    },
+    {
+        id: 7,
+        name: '部门G',
+        parentId: 2
+    },
+    {
+        id: 8,
+        name: '部门H',
+        parentId: 4
+    }
+];
+function buildTree(arr) {
+  const tree = [];
+  const map = {};
+
+  // 创建一个id到节点的映射
+  arr.forEach(node => {
+    map[node.id] = {
+      id: node.id,
+      name: node.name,
+      children: []
+    };
+  });
+
+  // 构建树形结构
+  arr.forEach(node => {
+    const parent = map[node.parentId];
+    if (parent) {
+      parent.children.push(map[node.id]);
+    } else {
+      tree.push(map[node.id]);
+    }
+  });
+
+  return tree;
+}
+
+function insert(tree, parent, node) {
+  const queue = [tree];
+  if (parent === null || parent === undefined) {
+    node.children = node.children || [tree];
+    return node;
+  } else {
+    while (queue.length) {
+      const current = queue.shift();
+      if (current.id === parent) {
+        current.children.push(node);
+        return tree;
+      } else {
+        queue.push(...current.children);
+      }
+    }
+  }
+}
+```
+
+## 写出一个函数trans，将数字转换成汉语的输出，输入为不超过10000亿的数字。
+```javascript
+function trans(targetNum) {
+  const numberToChinese = ['零', '一', '二', '三', '四', '五', '六', '七', '八', '九'];
+  const units = ['', '万', '亿', '万亿'];
+  const times = ['', '十', '百', '千'];
+  let targetStr = String(targetNum);
+  let result = '';
+  for (let i = targetStr.length - 1; i >= 0; i -= 4) {
+    const unit = units[Math.floor((targetStr.length - 1 - i) / 4)];
+    let zeroCount = 0;
+    let j = Math.max(i - 3, 0);
+    let str = '';
+    while (j <= i) {
+      if (targetStr[j] === '0') {
+        zeroCount++;
+      } else {
+        if (zeroCount > 0) {
+          str += '零';
+          zeroCount = 0;
+        }
+        str += numberToChinese[parseInt(targetStr[j])] + times[Math.abs(j - i)];
+      }
+      j++;
+    }
+    if (str.startsWith('一十')) {
+      str = str.slice(1);
+    }
+    if (str) {
+      result = str + result + unit;
+    }
+  }
+  return result;
+}
+```
+
+## 去除字符串中出现次数最少的字符，不改变原字符串的顺序。
+```javascript
+function removeLeastFrequencyChars(str) {
+	const strToChar = new Map();
+	let minCount = Number.MAX_SAFE_INTEGER;
+	for (let i = 0; i < str.length; i++) {
+		const count = strToChar.get(str[i]) || 0;
+		strToChar.set(str[i], count + 1);
+	}
+	strToChar.forEach((m, s) => {
+		if (m < minCount) {
+			minCount = m;
+		}
+	});
+	let result = '';
+	for (let i = 0; i < str.length; i++) {
+		if (strToChar.get(str[i]) > minCount) {
+			result += str[i];
+		}
+	}
+	return result;
+}
+// “ababac” —— “ababa”
+// “aaabbbcceeff” —— “aaabbb”
+```
+
+## 不定长二维数组的全排列
+
+```javascript
+// 输入 [['A', 'B', ...], [1, 2], ['a', 'b'], ...]
+
+// 输出 ['A1a', 'A1b', ....]
+
+function allSort(target) {
+    if (!Array.isArray(target) || !target.length) return [];
+    let result = [].concat(target[0]);
+
+    for (let i = 1; i < target.length; i++) {
+        let temp = [];
+        for (let j = 0; j < result.length; j++) {
+            temp = temp.concat(target[i].map(m => result[j] + m));
+        }
+        result = temp;
+    }
+    return result;
+}
 ```
 
 ## 资料
