--- a/_posts/微信/小程序/2022-7-13-小程序总结.md
+++ b/_posts/微信/小程序/2022-7-13-小程序总结.md
@@ -92,15 +92,16 @@ getApp().func()
 如果 `wx.getSetting` 返回的 authSetting 中没有对应的权限，说明没有调用过对应api，直接调用。
 
 ## 小程序登录流程
-`uni.getUserProfile` 拿到 encryptedData 和 iv，`uni.login` 拿到 code 再用这三个作为参数，请求后台接口获取用户信息。
+`uni.getUserProfile` 或通过 `button-type="getPhoneNumber"` 的 button 拿到 encryptedData 和 iv，`uni.login` 拿到 code（getPhoneNumber可以直接拿到） 再用这三个作为参数，请求后台接口获取用户信息。
 
 如果内置的 webview 也需要登录，可以约定一个一次性 code，在获取用户信息时一并请求，作为地址传给 webview，让 webview 获取用户信息。
 
-## 获取用户相关信息方法
+## 获取用户手机号，头像和昵称方法
 
 ```html
 <button open-type="getUserInfo" bindgetuserinfo="test"></button>
 <button open-type="getPhoneNumber" bindgetphonenumber="test"></button>
+
 <button open-type="chooseAvatar" bindchooseavatar="test"></button>
 <!--用户昵称 在此input输入时，键盘上会有用户昵称显示，微信也会异步安全检测用户名，未通过就清空。msgSecCheck接口
 建议通过form-type为submit的button手机输入信息-->
