--- a/_posts/Vue/2023-7-10-pinia指南.md
+++ b/_posts/Vue/2023-7-10-pinia指南.md
@@ -1,4 +1,15 @@
-
+---
+layout:     post
+title:      pinia指南
+subtitle:   
+date:       2023-7-10
+author:     sq
+header-img: 
+catalog: true
+tags:
+    - pinia
+---
+# pinia指南
 ## 安装
 
 ```shell
@@ -419,7 +430,7 @@ export default {
   },
 }
 ```
-    
+
 ## Action
 
 Action 相当于组件中的 method。
