--- a/_posts/微信/小程序/2022-11-07-小程序指南.md
+++ b/_posts/微信/小程序/2022-11-07-小程序指南.md
@@ -9,43 +9,70 @@ catalog: true
 tags:
     - 小程序
 ---
-# 小程序
-## 指南
+# 小程序指南
 
-#### 获取节点信息
-[节点信息查询和布局相交状态](https://developers.weixin.qq.com/miniprogram/dev/framework/view/selector.html)
-
-#### JS
+## JS
+### 初始化
 js 文件中会调用 Component，Page 或 App 来实例化组件，页面或全局实例。这些构造函数外面的代码也能被运行。
 
-###### Router
+### 获取节点信息
+获取节点信息需要先实例化 SelectorQuery，再调用实例的方法来拿到 NodesRef，最后要调用实例的 `exec` 函数来执行。NodesRef 有可以获取节点布局位
+置等信息的方法。
+
+获取节点相交状态需要先实例化 IntersectionObserver，再调用实例方法设置参照区域，接着指定目标节点并监听。
+
+主要概念如下：
+- 参照节点：监听的参照节点，取它的布局区域作为参照区域。如果有多个参照节点，则会取它们布局区域的 交集 作为参照区域。页面显示区域也可作为参照区域之一。
+- 目标节点：监听的目标，默认只能是一个节点（使用 selectAll 选项时，可以同时监听多个节点）。
+- 相交区域：目标节点的布局区域与参照区域的相交区域。
+- 相交比例：相交区域占参照区域的比例。
+- 阈值：相交比例如果达到阈值，则会触发监听器的回调函数。阈值可以有多个。
+
+在自定义组件或包含自定义组件的页面中，推荐使用 this 替换 wx，如 this.createIntersectionObserver 来代替 wx.createIntersectionObserver ，
+this.createSelectorQuery 来代替 wx.createSelectorQuery 这样可以确保在正确的范围内选择节点。
+
+### Router
 页面路由器对象。可以通过 this.pageRouter 或 this.router 获得当前页面或自定义组件的路由器对象。
 但如果在自定义组件中调用， this.pageRouter 将相对于自定义组件所在的页面来进行路由跳转，而 this.router 相对于自定义组件自身的路径。
 
-页面路由器有 switchTab reLaunch redirectTo navigateTo navigateBack 五个方法，与 wx 的同名方法功能相同，区别在页面路由的方法调用时是相对于 this 指代的页面或组件。
+页面路由器有 switchTab reLaunch redirectTo navigateTo navigateBack 五个方法，与 wx 的同名方法功能相同，区别在页面路由的方法调用时是相
+对于 this 指代的页面或组件。
 
+### 生命周期
+#### 页面生命周期
+在 `Page({})` 中定义。
 
+[Page参数](https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html)
 
+#### 组件生命周期
+生命周期方法可以直接定义在 Component 构造器的第一级参数中。
 
+推荐在 Component 构造器的第一级参数中 lifetimes 字段内进行声明，其优先级最高。
 
+在 behaviors 中也可以编写生命周期方法。
 
-### 搜索索引
-[sitemap](https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html)
-### 场景值
-[场景值](https://developers.weixin.qq.com/miniprogram/dev/framework/app-service/scene.html)
+注意：
+- created 时不能调用 setData，只应该用于给组件 this 添加一些自定义属性字段。
+
+[组件生命周期](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
+
+#### 组件所在页面的生命周期
+组件所在页面的生命周期在 pageLifetimes 定义段中定义。
+
+注意：自定义 tabBar 的 pageLifetime 不会触发。
+
+[可用的全部生命周期列表](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
+
 
 ### 自定义组件
-
-
-
-
-
-
+#### 样式
 ##### 外部样式类
-在 Component 中用 externalClasses 定义段定义若干个外部样式类属性。这个样式类本身写在页面中而非组件的实现中。
-使用时在标签上通过该属性传入自定义class。
+字符串数组。在 Component 中用 externalClasses 定义段定义若干个外部样式类属性。这个样式类本身写在页面中而非组件的实现中。
+
+使用时在标签上通过定义的属性传入自定义class。
 
 注意：在同一个节点上使用普通样式类和外部样式类时，两个类的优先级是未定义的，因此最好避免这种情况。
+
 ##### 引用页面或父组件的样式
 即使启用了样式隔离 isolated ，组件仍然可以在局部引用组件所在页面的样式或父组件的样式。
 通过在类名前加“~”引用页面样式，通过“^“引用父组件样式，也可以连续使用多个 ^ 来引用祖先组件中的样式。
@@ -53,7 +80,9 @@ js 文件中会调用 Component，Page 或 App 来实例化组件，页面或全
 注意：如果组件是比较独立、通用的组件，请优先使用外部样式类的方式，而非直接引用父组件或页面的样式。
 
 #### wxml
+##### 插槽
 支持slot标签。但默认只支持一个，要使用多个需要设置multipleSlots。
+
 ```javascript
 Component({
   options: {
@@ -63,6 +92,25 @@ Component({
   methods: { /* ... */ }
 })
 ```
+
+```html
+<view class="wrapper">
+  <slot name="before"></slot>
+  <view>这里是组件的内部细节</view>
+  <slot name="after"></slot>
+</view>
+
+<!-- 引用组件的页面模板 -->
+<view>
+  <component-tag-name>
+    <!-- 这部分内容将被放置在组件 <slot name="before"> 的位置上 -->
+    <view slot="before">这里是插入到组件slot name="before"中的内容</view>
+    <!-- 这部分内容将被放置在组件 <slot name="after"> 的位置上 -->
+    <view slot="after">这里是插入到组件slot name="after"中的内容</view>
+  </component-tag-name>
+</view>
+```
+
 #### 虚拟化组件节点-去掉组件使用时多加的包裹节点
 默认情况下，自定义组件本身的那个节点是一个“普通”的节点，使用时可以在这个节点上设置 class style 、动画、 flex 布局等，就如同普通的 view 组件节点一样。
 但有些时候希望自定义组件内部的第一层节点能够响应 flex 布局或者样式由自定义组件本身完全决定。就是组件使用时会有一个标签包裹着组件，等于是把这个包裹标签去掉。
@@ -81,32 +129,10 @@ Component({
   externalClasses: ['class'], // 可以将 class 设为 externalClasses
 })
 ```
+
 需要注意的是，自定义组件节点上的 class style 和动画将不再生效，但仍可以：
 - 将 style 定义成 properties 属性来获取 style 上设置的值；
 - 将 class 定义成 externalClasses 外部样式类使得自定义组件 wxml 可以使用 class 值。
-
-#### 生命周期
-##### 页面生命周期
-在 `Page({})` 中定义。
-
-[Page参数](https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html)
-
-##### 组件生命周期
-生命周期方法可以直接定义在 Component 构造器的第一级参数中。
-
-推荐在 Component 构造器的第一级参数中 lifetimes 字段内进行声明，其优先级最高。
-
-注意：
-- created 时不能调用 setData
-
-[组件生命周期](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
-
-##### 组件所在页面的生命周期
-组件所在页面的生命周期在 pageLifetimes 定义段中定义。
-
-注意：自定义 tabBar 的 pageLifetime 不会触发。
-
-[可用的全部生命周期列表](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
 
 #### behaviors
 ##### 自定义behaviors
@@ -116,15 +142,21 @@ Component({
 - 同名数据：对象类型合并；其余情况会进行数据覆盖，覆盖规则为： 引用者 behavior > 被引用的 behavior 、 靠后的 behavior > 靠前的 behavior。
 - 生命周期函数和 observers 不会相互覆盖，而是在对应触发时机被逐个调用：behavior 优先于组件执行； 被引用的 behavior 优先于 引用者 behavior 执行； 靠前的 behavior 优先于 靠后的 behavior 执行。
 
+Behavior 函数，注册一个 behavior，接受一个 Object 类型的参数。
+
 ##### 内置behaviors
-自定义组件可以通过引用内置的 behavior 来获得内置组件的一些行为。
+自定义组件可以通过引用内置的 behavior 来获得内置组件的一些行为。目前都是 form 表单相关的。
+
 https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/behaviors.html#%E5%86%85%E7%BD%AE-behaviors
+
 ##### 组件扩展
-Behaviors选项对象的definitionFilter函数，接收两个参数，第一个参数是使用该 behavior 的 component 的定义对象，第二个参数是该 behavior 所使用的 behavior 的 definitionFilter 函数列表。
+Behaviors 选项对象的 definitionFilter 函数，接收两个参数，第一个参数是使用该 behavior 的 component/behavior 的定义对象，第二个参数是该 behavior 
+所使用的 behavior 的 definitionFilter 函数列表。
 
 组件扩展提供了修改自定义组件定义段的能力。例如实现computed。
 
 https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/extend.html
+
 #### 组件通信
 ##### 获取组件实例
 可在父组件里调用 this.selectComponent ，获取子组件的实例对象。如：this.selectComponent(selector)。
@@ -859,3 +891,9 @@ https://developers.weixin.qq.com/miniprogram/dev/component/native-component.html
 
 ### 原生组件间层级
 （同层渲染下已无该问题）支持在样式中声明 z-index 来指定原生组件的层级。该 z-index 仅调整原生组件之间的层级顺序，其层级仍高于其他非原生组件。
+
+## 资料
+### 搜索索引
+[sitemap](https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html)
+### 场景值
+[场景值](https://developers.weixin.qq.com/miniprogram/dev/framework/app-service/scene.html)
