--- a/_posts/微信/小程序/2022-7-13-小程序总结.md
+++ b/_posts/微信/小程序/2022-7-13-小程序总结.md
@@ -82,14 +82,70 @@ getApp().globalData
 getApp().func()
 ```
 
-## 获取授权流程
-先调用 `wx.getSetting`，返回结果的 authSetting 是否有对应的权限。
+## 获取需要授权 API 的流程
 
-如需要调用 `wx.getLocation`，判断 `scope.userLocation` 是否为 true。true 就直接调用对应api，false 需要调用 `wx.showModal`，设置 title
-和 content 引导用户打开设置，点击同意后调用 `wx.openSetting`，在回调中拿到 authSetting，判断是否有对应api权限，有就调用对应api。没有就设置
-默认值或等待用户下次点击再次调用方法。
+```javascript
+function getUserPermission(permission) {
+  return new Promise((resolve, reject) => {
+    wx.getSetting({
+      success(res) {
+        if (res.authSetting[permission]) {
+          resolve(true);
+        } else if (res.authSetting[permission] === false) {
+          reject(false);
+        } else {
+          wx.authorize({
+            scope: permission,
+            success() {
+              resolve(true);
+            },
+            fail() {
+              reject(false);
+            }
+          });
+        }
+      },
+      fail() {
+        reject(false);
+      }
+    });
+  });
+}
 
-如果 `wx.getSetting` 返回的 authSetting 中没有对应的权限，说明没有调用过对应api，直接调用。
+function callAuthApi(permission, permissionName) {
+  return new Promise((resolve, reject) => {
+    getUserPermission(permission).then(() => {
+      resolve();
+    }).catch(() => {
+      wx.showModal({
+        content: `检测到您没打开${permissionName}权限，是否去设置打开？`,
+        success: res => {
+          if (res.confirm) {
+            wx.openSetting({
+              success: res => {
+                if (res.authSetting[permission]) {
+                  resolve();
+                } else {
+                  reject();
+                }
+              }
+            })
+          } else {
+            reject();
+          }
+        }
+      })
+    })
+  });
+}
+```
+
+## 获取定位及逆地址解析经纬度
+1. requiredPrivateInfos 和 permission 要配置权限。
+2. 调用 `wx.getLocation` 拿到经纬度
+3. 调用腾讯 web service api。
+
+地址：https://apis.map.qq.com/ws/geocoder/v1/?location=latitude,longitude&key=
 
 ## 小程序登录流程
 `uni.getUserProfile` 或通过 `button-type="getPhoneNumber"` 的 button 拿到 encryptedData 和 iv，`uni.login` 拿到 code（getPhoneNumber可以直接拿到） 再用这三个作为参数，请求后台接口获取用户信息。
