--- a/_posts/JavaScript/原型、类/2022-11-26-JS中的原型.md
+++ b/_posts/JavaScript/原型、类/2022-11-26-JS中的原型.md
@@ -22,7 +22,9 @@ tags:
 
 当我们从对象中读取一个缺失的属性时，就是沿着__proto__向上查找。
 
-__proto__属性有点过时了，应该使用函数 Object.getPrototypeOf/Object.setPrototypeOf 来取代__proto__去 get/set 原型。
+`__proto__` 属性有点过时了，应该使用函数 Object.getPrototypeOf/Object.setPrototypeOf 来取代__proto__去 get/set 原型。
+
+`__proto__` is a property of a class instance. prototype is a property of a class constructor
 
 ## 原型上的 getter 和 setter
 原型上定义的getter和setter等同于调用函数。setter为调用函数的对象赋值，而不是为原型对象赋值，getter读取对象属性，没有就从原型链依次查找原型，读取数据。
