--- a/_posts/JavaScript/事件/2023-1-10-鼠标拖放.md
+++ b/_posts/JavaScript/事件/2023-1-10-鼠标拖放.md
@@ -48,8 +48,9 @@ iframe {
         const shiftY = event.clientY - elem.getBoundingClientRect().top;
 
         elem.style.position = 'absolute';
-        elem.style.zIndex = 1000;
-        document.body.append(ball);
+        elem.style.zIndex = '1000';
+        // 将元素从其父元素下移动到 body 下
+        document.body.append(elem);
 
         moveAt(event.pageX, event.pageY);
 
@@ -79,9 +80,12 @@ iframe {
 ```
 
 ## 鼠标事件中拿到当前顶层元素
-鼠标事件只发生在最顶层元素上，被遮挡的元素无法触发。当我们拖动时，可拖动元素一直是位于其他元素上的。那么在 mousemove 事件中，我们无法判断是否拖动到了可拖放区域。
+将元素移动起来后，通常需要放置在另一个 droppable 的元素上。第一个想法可能是使用 `onmouseover/mouseup` 处理潜在的 droppable 元素。但鼠标
+事件只发生在最顶层元素上，被遮挡的元素无法触发。当我们拖动时，可拖动元素一直是位于其他元素上的。那么在 mousemove 事件中，我们无法判断是否拖动到
+了可拖放区域。
 
-解决方法是可以在需要判断是否拖拽到可拖放区域时，先将当前拖拽元素隐藏，然后调用 document.elementFromPoint(clientX, clientY)，拿到最上层元素后，再显示当前拖拽元素。
+解决方法是可以在需要判断是否拖拽到可拖放区域时，先将当前拖拽元素隐藏，然后调用 `document.elementFromPoint(clientX, clientY)`，拿到最上层元
+素后，再显示当前拖拽元素。
 
 因此我们修改 onMouseMove 方法：
 ```javascript
@@ -115,12 +119,17 @@ function onMouseMove (event) {
 - 元素的 draggable 属性设置成 true。
 - 为 dragstart 添加监听程序，在其中设置拖拽数据。
 
+> 当一个元素被设置成可拖拽时，元素中的文本和其他子元素不能再以正常的方式（通过鼠标点击和拖拽）被选中。用户必须按住 alt 键，
+> 再用鼠标选择文本，或者使用键盘选择。
+
 当用户开始拖拽时，会触发 dragstart 事件。dragstart 是冒泡事件。
+
+在 dragenter 和 dragover 事件监听函数中，可以检查是否允许放置、取回拖拽数据等。
 
 ### 拖拽数据
 所有 拖拽事件 都有一个名为 dataTransfer 的属性，它持有拖拽数据。拖拽数据 包含两个信息，数据的类型（或格式）和数据值。
 
-拖拽数据的类型属性返回一个类似 DOMString 的 MIME-type 的列表，你还可以创建自己的类型。
+拖拽数据的 `type` 属性返回一个类似 DOMString 的 MIME-type 的列表，你还可以创建自己的类型。
 最常用的类型列在文章[推荐拖拽类型](https://developer.mozilla.org/zh-CN/docs/Web/API/HTML_Drag_and_Drop_API/Recommended_drag_types)中。
 
 #### 数据的添加和删除
@@ -138,13 +147,27 @@ function onMouseMove (event) {
 `event.dataTransfer.setDragImage(image, xOffset, yOffset);`
 
 ### 拖拽效果
-拖拽过程中可能会执行一些操作。可以在 dragstart 事件监听程序中设置 effectAllowed 属性以指定允许拖拽源头执行三种操作中的哪几种。属性默认允许所有的操作。
+拖拽过程中可能会执行一些操作。可以在 dragstart 事件监听程序中设置 effectAllowed 属性以指定允许拖拽源头执行三种操作中的哪几种。
+
+属性默认允许所有的操作。
 
 copy 操作用来指示被拖拽的数据将从当前位置复制到放置位置。 move 操作指示被拖拽的数据会被移动，link 操作表示在源和放置位置之间将会创建某种形式的关系或连接。
 
 `event.dataTransfer.effectAllowed = "copy";`
 
 以上代码只允许复制，在拖拽到不支持复制的容器时鼠标会显示禁止标识。
+
+还有其他可选项，如：
+* none 不允许操作
+* copy 复制
+* move 移动
+* link 只链接
+* copyMove 复制或移动
+* copyLink 复制或链接
+* linkMove 链接或移动
+* all 复制、移动或链接
+
+设置了允许特定的操作，那么未允许的就会被禁止。如 `copyMove`，允许复制或移动，但禁止链接。
 
 ### dropEffect
 在拖拽操作期间，dragenter 或 dragover 事件的监听程序可以检查 effectAllowed 属性，以查看哪些操作是允许的。
@@ -153,44 +176,63 @@ copy 操作用来指示被拖拽的数据将从当前位置复制到放置位置
 DataTransfer.dropEffect 属性控制在拖放操作中给用户的反馈（通常是视觉上的）。它会影响在拖拽过程中**光标的手势**。
 
 此外在 dragenter 和 dragover 事件中，dropEffect 属性被初始化为用户请求的效果。用户可以通过按下修饰键来修改为所需的效果。如 alt、ctrl 和 shift。
-你可以在 dragenter 或 dragover 事件期间修改 dropEffect 属性，例如将某个放置目标设置为只支持某些操作，覆盖用户指定的效果。
+你可以在 dragenter 或 dragover 事件期间修改 dropEffect 属性，例如将某个放置目标设置为只支持某些操作，覆盖用户指定的效果。必须是 `effectAllowed`
+属性中的一个，否则被设置为允许的替代值。
 
-在 drop 和 dragend 事件中，你可以检查 dropEffect 属性，以确定最终选择了哪种效果。如果所选的效果是 "move"，那么应该在 dragend 事件中从拖拽源头删除拖拽数据。
+在 drop 和 dragend 事件中，你可以检查 dropEffect 属性，以确定最终选择了哪种效果。如果所选的效果是 "move"，那么应该在 dragend 事件中从拖
+拽源头删除拖拽数据。
 
 ### 指定放置目标
-dragenter 或 dragover 事件的监听程序用于表示有效的放置目标，也就是被拖拽项目可能放置的地方。
-网页或应用程序的大多数区域都不是放置数据的有效位置，因此，这些事件的默认处理是不允许放置。
+网页或应用程序的大多数区域都不是放置数据的有效位置，因此，这些元素的 `dragenter` 和 `dragover` 事件的默认处理是不允许放置。
 
-如果你想要允许放置，你必须取消 dragenter 或 dragover 事件来阻止默认的处理。
+如果你想要允许某个元素放置，你必须取消其 dragenter 或 dragover 事件的默认行为。如：`return false` 和 `event.preventDefault()`。
 
 #### 放置反馈
 鼠标指针将根据 dropEffect 属性展示。大多数情况下，鼠标反馈就够了。但我们还可以通过 css 更新界面。
 
-例如-moz-drag-over CSS 伪类。在 dragenter 事件阻止默认行为，样式就会生效，尽管这个伪类叫 drag-over。
+例如.elem:-moz-drag-over CSS 伪类。在有 elem 类的元素上监听 dragenter 事件阻止默认行为，样式就会生效，尽管这个伪类叫 drag-over。
 
-对于复杂的效果，可以在 dragenter 插入元素。dragover 事件在鼠标指向的元素上触发，可以通过事件属性将元素移动到鼠标位置。
+对于复杂的效果，可以在 dragenter 插入元素，同时因为dragover 事件在鼠标指向的元素上触发，所以通过事件属性将元素移动到鼠标位置。
 
-dragleave 事件会在拖拽离开元素时在该元素上触发。即使拖拽被取消，事件也会触发，所以可以确保在该事件中的清除操作一定会完成。
+dragleave 事件会在拖拽离开元素时在该元素上触发。即使拖拽被取消，事件也会触发，所以可以确保在该事件中的清除操作一定会完成。这也是移除 `dragenter`
+中插入的元素或其他操作的好时机。
 
 ### 执行放置
 当用户放开鼠标，拖放操作就会结束。 如果在有效的放置目标元素（即取消了 dragenter 或 dragover 事件的元素）上放开鼠标，放置就会成功，
 drop 事件就会在目标元素上触发。否则，拖拽会被取消，不会触发 drop。
 
-在 drop 事件中，你应该取回放置的数据并将其插入到放置的位置。
+在 drop 事件中，你应该取回放置的数据并将其插入到放置的位置。你可以使用 dropEffect 属性来确定需要哪种拖拽操作。
 
-在所有拖拽操作相关的事件中，事件的 dataTransfer 属性会一直保存着拖拽数据。可使用 getData() 方法来取回数据。
+在所有拖拽操作相关的事件中，事件的 dataTransfer 属性会一直保存着拖拽数据。可使用 `getData(type)` 方法来取回 `setData` 设置的数据。
 
-在简单的情况中，你可以使用一个特别的类型 URL 来取回列表中第一个有效的 URL。例如：
+有一个特别的类型， `URL` 可以用来取回列表中第一个有效的 URL。例如：
+
 `var link = event.dataTransfer.getData("URL");`
 
 URL 类型是一个特别的类型，只作为简写类型，不在 types 属性规定的类型列表中出来。
 
+有时你可能支持不同的格式，而你希望取回数据的格式是支持格式中最具体的一种。在这个例子中，放置目标支持三种格式。
+
+下面的例子返回格式支持最佳的数据：
+
+```javascript
+function doDrop(event) {
+  const supportedTypes = ["application/x-moz-file", "text/uri-list", "text/plain"];
+  const types = event.dataTransfer.types.filter(type => supportedTypes.includes(type));
+  if (types.length) {
+    const data = event.dataTransfer.getData(types[0]);
+  }
+  event.preventDefault();
+}
+```
+
 ### 完成拖拽
 一旦拖拽完成，dragend 会在拖拽源头即触发 dragstart 的元素上触发。无论拖拽是成功还是被取消，这个事件都会被触发。
+然而，你可以使用 dropEffect 属性来决定执行什么放置操作。
 
-如果在 dragend 事件中，dropEffect 属性值为 none，则拖拽会被取消。否则，这个属性会规定需要执行什么操作。
-源头元素可使用这个信息以在拖拽操作完成后从原来的位置移除被拖拽的项目。mozUserCancelled 属性会在用户取消拖拽（按下 Esc 键）时设置为 true，
-在拖拽因为其他原因如无效放置目标等被取消时，或拖拽成功时，则设置为 false。
+如果在 dragend 事件中，dropEffect 属性值为 none，则拖拽会被取消。否则，这个属性会规定需要执行什么操作。源头元素可使用这个信息以在拖拽操作完
+成后从原来的位置移除被拖拽的项目。mozUserCancelled 属性会在用户取消拖拽（按下 Esc 键）时设置为 true，在拖拽因为其他原因如无效放置目标等被取
+消时，或拖拽成功时，则设置为 false。
 
 放置可发生在同一窗口或另一个应用程序中。两种情况都会触发 dragend 事件。事件的 screenX 和 screenY 属性会被设置为放置发生时鼠标在屏幕上的坐标。
 
