--- a/_posts/微信/小程序/2022-7-13-小程序总结.md
+++ b/_posts/微信/小程序/2022-7-13-小程序总结.md
@@ -148,7 +148,8 @@ function callAuthApi(permission, permissionName) {
 地址：https://apis.map.qq.com/ws/geocoder/v1/?location=latitude,longitude&key=
 
 ## 小程序登录流程
-`uni.getUserProfile` 或通过 `button-type="getPhoneNumber"` 的 button 拿到 encryptedData 和 iv，`uni.login` 拿到 code（getPhoneNumber可以直接拿到） 再用这三个作为参数，请求后台接口获取用户信息。
+`uni.getUserProfile` 或通过 `button-type="getPhoneNumber"` 的 button 拿到 encryptedData 和 iv，`uni.login` 拿到 
+code（getPhoneNumber可以直接拿到） 再用这三个作为参数，请求后台接口获取用户信息。
 
 如果内置的 webview 也需要登录，可以约定一个一次性 code，在获取用户信息时一并请求，作为地址传给 webview，让 webview 获取用户信息。
 
