--- a/_posts/工程化/项目常用配置.md
+++ b/_posts/工程化/项目常用配置.md
@@ -50,9 +50,19 @@ chain.plugin('process').use(webpack.ProvidePlugin, [{
   process: 'process'
 }]);
 
-new webpack.ProvidePlugin({
-  process: 'process'
-});
+chain.plugin('Buffer').use(webpack.ProvidePlugin, [{
+  Buffer: ['buffer', 'Buffer']// ['包名', '包中的值']
+}]);
+{
+  plugins: [
+    new webpack.ProvidePlugin({
+      Buffer: ['buffer', 'Buffer']
+    }),
+    new webpack.ProvidePlugin({
+      process: 'process'
+    })
+  ]
+}
 ```
 
 ## webpack4升级到webpack5
