--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -141,7 +141,7 @@ export default {
 ```
 
 ### vue 双向绑定的原理是什么
-数据劫持加上发布订阅模式，通过Object.defineProperty劫持变量的get和set，在数据变化时发布消息，通知订阅者，触发监听回调。
+数据劫持加上观察者模式，通过Object.defineProperty劫持变量的get和set，在数据变化时发布消息，通知订阅者，触发监听回调。
 
 Dep Watcher Observer
 
