--- a/_posts/Cordova/2023-4-15-Cordova基础.md
+++ b/_posts/Cordova/2023-4-15-Cordova基础.md
@@ -116,3 +116,54 @@ cordova run android
 # 模拟器启动
 cordova emulate android
 ```
+
+## 事件
+deviceready，设备就绪，设备API可用。
+
+pause，应用挂起，切换到后台
+resume，应用切换到前台
+backbutton，点击回退按钮
+menubutton，点击菜单按钮
+
+https://cordova.apache.org/docs/en/latest/
+
+## cordova项目文件
+
+### config.xml
+项目目录下的 config.xml 是 cordova项目的主配置文件。项目构建后，会被复制到平台的子目录下。
+
+具体例子讲解：
+```xml
+<!--xml版本和字符集-->
+<?xml version='1.0' encoding='utf-8'>
+<!--cordova create [目录名] [id] [应用名称]  id 就是这里的id 应用名称是 name 标签的内容-->
+<widge id="me.cliu.hellocordova" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+   <name>CordovaApp</name>
+<!--   应用简介、描述-->
+   <description>
+      A sample Apache Cordova application
+   </description>
+   <author email="dev@apache.org" href="http://cordova.io">
+      Apache Cordova Team
+   </author>
+<!--   应用起始页面 项目根目录下的www目录下的index.html-->
+   <content src="index.html"></content>
+<!--   允许哪些域名可以和应用通信-->
+   <access origin="*"></access>
+<!--   应用需要和系统申请的权限-->
+   <allow-intent href="http://*/*"/>
+   <allow-intent href="https://*/*"/>
+   <allow-intent href="tel:*"/>
+   <allow-intent href="sms:*"/>
+   <allow-intent href="mailto:*"/>
+   <allow-intent href="geo:*"/>
+<!--   平台特定的权限-->
+   <platform name="android">
+      <allow-intent href="market:*"/>
+   </platform>
+   <platform name="ios">
+      <allow-intent href="itms:*"/>
+      <allow-intent href="itms-apps:*"/>
+   </platform>
+</widge>
+```
