--- a/_posts/前端/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/前端/CSS/2022-12-14-css查漏补缺.md
@@ -37,7 +37,8 @@ vertical-align对块级元素无用。
 
 3、设置line-height值为0。
 
-如果要让图片垂直居中，父元素设置行高，图片设置vertical-align为middle即可，但因为middle是基线往上1/2的x-height，所以父元素还需要设置font-size为0才能实现真正的垂直居中。font-size为0，则基线等线都会在高度为中心线上。
+如果要让图片垂直居中，父元素设置行高，图片设置vertical-align为middle即可，但因为middle是基线往上1/2的x-height，所以父元素还需要设置 
+font-size为0才能实现真正的垂直居中。font-size为0，则基线等线都会在高度为中心线上。
 
 ## flex 和单行省略
 `flex: 1; display: flex`下的单行省略，容器需要设置`overflow: hidden;`单行省略除了单行省略需要的三个样式外，还需要设置`width: 100%;`
