--- a/_posts/前端/JavaScript/2022-11-03-BigInt.md
+++ b/_posts/前端/JavaScript/2022-11-03-BigInt.md
@@ -11,14 +11,19 @@ tags:
 ---
 ## 语法
 bigint，整数。创建的方式有两种：在一个整数字面量后面加 n 或者调用 BigInt 函数，该函数从字符串、数字等中生成 bigint。
+
 ## 数学运算符
-BigInt能像常规数字类型一样使用（除一元加法），但是在使用数学运算符时，不能和常规类型混用。计算结果的小数部分会舍去。
+BigInt能像常规数字类型一样使用（除 >>> （无符号右移）之外的位操作和 `+`单目运算符），但是在使用数学运算符时，不能和常规数字类型混用。
+此外计算结果的小数部分会舍去。
+
 ```javascript
 let bigint = 1n;
-alert( +bigint ); // error
+alert( +bigint ); // 报错，不支持单目运算符
 ```
+
 ## 比较运算符
 可以和常规数字比较，在==时相同，在===时不相同。
+
 ## 布尔运算
 在|| && if等布尔运算中和常规类型表现一致。
 
