--- a/_posts/前端/小程序/2022-11-07-小程序指南.md
+++ b/_posts/前端/小程序/2022-11-07-小程序指南.md
@@ -29,8 +29,6 @@ wxml 编写页面 html。
 
 在项目根目录下，app.json, app.wxss 和 app.js 文件影响全局。每个页面也有对应的 json，js，wxml 和 wxss 文件。
 
-自定义组件和页面所在项目根目录名不能以“wx-”为前缀，否则会报错。
-
 ### 一些特殊文件
 工具配置 project.config.json 。小程序开发者工具在每个项目的根目录都会生成一个 project.config.json，其中会包括编辑器的颜色、代码上传时
 自动压缩等等一系列[选项](https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html)。
@@ -117,13 +115,19 @@ Tab 切换对应的生命周期（以 A、B 页面为 Tabbar 页面，C 是从 A
 
 [可用的全部生命周期列表](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
 
+### 关于命名
+自定义组件和页面所在项目根目录名不能以“wx-”为前缀，否则会报错。
+
+WXML 节点标签名只能是小写字母、中划线和下划线的组合。
+WXML 所有组件与属性都是小写，以连字符-连接。
+
+WXS 模块命名以及内部变量命名必须是英语字母、下划线或数字，不能以数字开头。
+
 ## wxml
 ### 基础
-1. WXML 节点标签名只能是小写字母、中划线和下划线的组合。
-2. 所有组件与属性都是小写，以连字符-连接。
-3. 组件的公共属性：id，class，style，hidden，data-*，bind* / catch*。
-4. 双花括号支持运算、关键字、组合和表达式，不会读取不存在的属性而报错
-5. 花括号和引号之间如果有空格，将最终被解析成为字符串
+1. 组件的公共属性：id，class，style，hidden，data-*，bind* / catch*。
+2. 双花括号支持运算、关键字、组合和表达式，不会读取不存在的属性而报错
+3. 花括号和引号之间如果有空格，将最终被解析成为字符串
 
 关于组合的例子：
 ```html
@@ -192,8 +196,8 @@ wx:if 控制元素是否渲染，设置 hidden 的元素始终会渲染，只是
 ### template
 可复用的代码片段。
 
-定义：name 属性定义模板名称，然后在 template 标签内定义模板内容。
-使用：is 属性声明使用的模板名称。data 属性传入 template 使用的变量。
+定义：template 标签的 name 属性定义模板名称，然后在 template 标签内定义模板内容。
+使用：import 标签引入，template 的 is 属性声明使用的模板名称。data 属性传入 template 使用的变量。
 ```javascript
 <!--模板定义-->
 <!-- item.wxml -->
@@ -267,7 +271,7 @@ var tools = require("./tools.wxs");
 * 如果一个 wxs 模块在定义之后，一直没有被引用，则该模块不会被解析与运行。
 * `<wxs>` 模块只能在定义模块的 WXML 文件中被访问到。使用 `<include>` 或 `<import>` 时，`<wxs>` 模块不会被引入到对应的 WXML 文件中。
 * `<template>` 标签中，只能使用定义该 `<template>` 的 WXML 文件中定义的 `<wxs>` 模块。
-* 单个 wxml 文件内，重名模块名后者覆盖前者。模块命名必须是英语字母、下划线或数字，不能以数字开头。
+* 单个 wxml 文件内，重名模块名后者覆盖前者。
 
 ```html
 <wxs src="../tool.wxs" module="tool"/>
@@ -284,18 +288,12 @@ console.log(tools.FOO);
 ### wxs 标签
 module是模块名，必填，在当前文件内值要唯一，否则后者覆盖前者。
 
-module 必须是 a-zA-Z或下划线_和0-9组成。数字不能作为开头。
-
-### require函数
-在.wxs模块中引用其他 wxs 文件模块，可以使用 require 函数。
-
 ### 变量
 1. 有部分保留关键字 
 2. WXS 中的变量均为值的引用。 
 3. 没有声明的变量直接赋值使用，会被定义为全局变量。 
 4. 如果只声明变量而不赋值，则默认值为 undefined。 
 5. var表现与javascript一致，会有变量提升。
-6. 命名必须是 a-zA-Z或下划线_和0-9组成。数字不能作为开头。
 
 ### 支持的数据类型和全局变量
 wxs 中支持的数据类型和数据类型对应的方法和 JavaScript 中支持的不一定相同。
@@ -396,7 +394,7 @@ Page({
 https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/behaviors.html#%E5%86%85%E7%BD%AE-behaviors
 
 #### 组件扩展
-Behaviors 选项对象的 definitionFilter 函数，接收两个参数，第一个参数是使用该 behavior 的 component/behavior 的定义对象，第二个参数是该 behavior
+Behaviors 选项对象的 definitionFilter 属性，可以定义函数，接收两个参数，第一个参数是使用该 behavior 的 component/behavior 的定义对象，第二个参数是该 behavior
 所使用的 behavior 的 definitionFilter 函数列表。
 
 组件扩展提供了修改自定义组件定义段的能力。例如实现computed。
