--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -177,15 +177,25 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 下面是定点小数的表示：
 ![img.png](/img/+0.75和-0.75.png)
 
+定点整数原码取值范围：-2的N-1次方减1至2的N-1次方减1
+
 #### 反码
 正数的反码 = 原码
 
 负数的反码，则数值位全部取反，符号位不变
 
+定点整数反码取值范围：-2的N-1次方减1至2的N-1次方减1
+
 #### 补码
 正数的补码 = 原码
 
 负数的补码 = 反码 + 1
+
+在计算机中均采用补码表示
+
+补码算术运算过程中符号位和数值位采用同样的运算规则。
+
+定点整数的补码取值范围：-2的N-1次方至2的N-1次方减1
 
 #### 移码
 补码的基础上符号位取反，只能表示整数。为什么需要移码，移码可以非常方便地判断两个数的大小。如下图：
@@ -193,6 +203,8 @@ JavaScript 字符串都是 UTF-16 序列，正如 ECMAScript 标准所说： 当
 ![img.png](/img/移码.png)
 
 我们会发现移码从左往右，只要先有1就更大，如果都有1，就往后面比，先出来1的就更大
+
+> 补码和移码±0编码相同
 
 #### 为什么需要补码移码
 比如我们做一个运算 14 + (-14)，按道理应该等于0，但是我们把它们转为2进制，定点数的加法就出现问题了，居然不等于0，如下图：
