--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -60,6 +60,15 @@ tags:
 - 最后执行指令完毕，如果我们要打印console.log(a)的话，a因为本质上是一个内存地址，cpu会根据内存地址，找到这个地址里存放的值，也就是console.log显示的值
 - 获取到要显示的值后，存储器直接将数据传给显示器，这样我们就可以在屏幕上看到2这个结果了
 
+### 存储系统
+速度从快到慢包括 CPU 的寄存器， cache，内存（主存）RAM 和 ROM 以及外存（辅存）硬盘、光盘、U盘等。
+
+多级存储结构包括 cache 缓存-主存层次和主存-辅存层次。前者缓和 CPU 和主存之间的速率矛盾，后者逻辑扩大主存空间。
+
+局部性原理是层次化存储结构的支撑
+- 时间局部性：刚被访问的内容，立即又被访问。
+- 空间局部性：刚被访问的内容，临近的空间很快被访问。
+
 ## 为什么计算机内部选择二进制数表示
 - 技术实现简单，计算机是由逻辑电路组成，逻辑电路通常只有两个状态，开关的接通与断开，这两种状态正好可以用 “1” 和 “0” 表示;
 - 易于进行转换，二进制与十进制数易于互相转换;
