--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -78,8 +78,8 @@ tags:
 - 通信必须遵循共同的网络协议
 
 ### 局域网
-![1b903b9cfa892e1d1ccd65a1667e779](https://github.com/1f606/1f606.github.io/assets/51157718/6fb328e5-96ac-403f-823e-963641c243b4)
-![50256d543a840d6442a88e98e200203](https://github.com/1f606/1f606.github.io/assets/51157718/94a665ac-c829-4ba4-a977-2bdd3cfc35c3)
+![1b903b9cfa892e1d1ccd65a1667e779](/img/计算机基础/网络拓扑结构.png)
+![50256d543a840d6442a88e98e200203](/img/计算机基础/网络类型.png)
 
 ### 网络协议
 网络协议是计算机网络和分布系统中互相通信间的对等层实体交换信息时必须遵守的规则的集合。
