--- a/_posts/计算机基础/2022-12-6-计算机基础.md
+++ b/_posts/计算机基础/2022-12-6-计算机基础.md
@@ -77,6 +77,24 @@ tags:
 - 分布在不同位置多台独立的“自治计算机”
 - 通信必须遵循共同的网络协议
 
+### 以太网
+交换机基于数据包的源MAC地址学习并存入MAC地址表。交换机MAC地址表的老化时间是300秒。
+
+转发方式：
+如果目标地址 (目的MAC)在MAC地址表中存在，则交换机将数据转发至该端口;如果没有，交换机就向除接收到该数据帧的端口外的其他所有端口广播该数据帧。
+
+交换机的三种交换模式：
+* 快速转发：交换机接收到（数据帧前14个字节，7个字节的帧前缀，1个字节的起始帧和6个字节的目的地址)也就立刻转发该数据帧，
+* 碎片丢弃：不保存整个数据帧，只需要接收64个字节，就开始转发数据帧，超过64个字节就视为碎片丢弃。
+* 存储转发：转发前，将整个数据帧读取到内存里。
+
+#### 类型
+交换式以太网使用以太网交换机作为核心设备进行组网，与共享型局域网采用集线器等作为中间设备有所不同。
+
+#### 数据帧格式
+从前往后：前导码（8字节）-目的地址（6字节）-源地址（6字节）-类型（2字节）-数据（46到1500字节）-帧校验序列（4字节），最小帧长64字节（不包括前导码）。
+最小帧长是根据网络中检测冲突的最长时间确定的。
+
 ### 局域网
 ![1b903b9cfa892e1d1ccd65a1667e779](/img/计算机基础/网络拓扑结构.png)
 ![50256d543a840d6442a88e98e200203](/img/计算机基础/网络类型.png)
