--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -508,6 +508,7 @@ asyncPool(2, [1000, 5000, 3000, 2000], timeout).then(res => {
 });
 ```
 ## defer
+函数的延迟执行
 ```javascript
 Function.prototype.defer = function(ms) {
   let f = this;
@@ -518,7 +519,7 @@ Function.prototype.defer = function(ms) {
 ```
 
 ## compose
-函数的嵌套调用变成了线性
+接收一组函数，从前往后是最外层到最里层，嵌套调用。
 ```javascript
 function compose(...funcs) {
   return funcs
@@ -528,6 +529,7 @@ function compose(...funcs) {
 ```
 
 ## pipe
+接收一组函数，从前往后执行
 ```javascript
 function pipe(...args) {
   return result => {
